manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-app
  template:
    metadata:
      labels:
        app: user-app
    spec:
      containers:
        - name: user-app
          image: dmwm/userapp:v3
          ports:
            - name: web
              containerPort: 8080
          livenessProbe:
            httpGet:
              port: 8080
              path: /health
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              port: 8080
              path: /health
            initialDelaySeconds: 20
            periodSeconds: 5
