manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: user-app
  labels:
    app: user-app
spec:
  containers:
    - name: user-app
      image: dmwm/userapp:latest
      ports:
        - containerPort: 8080
