manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort
