manifests/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: user-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /user/$1
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              serviceName: user-service
              servicePort: 9000
            path: /otusapp/(.*)
