manifests/ingress_other.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: user-ingress-other
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              serviceName: user-service
              servicePort: 9000
