manifests/ingress_student.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: user-ingress-student
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /student/$1/$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              serviceName: user-service
              servicePort: 9000
            path: /otusapp/(.*)/(.*)
